--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "4square",
+  "name": "foursquareVenues",
   "version": "0.0.0",
   "description": "Simple query to 4square venue's api",
-  "main": "4square.js",
+  "main": "./foursquareVenues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,9 @@
   "license": "BSD",
   "dependencies": {
     "request": "~2.11.1",
+    "coffee-script": "~1.3.3"
+  },
+  "devDependencies": {
     "coffee-script": "~1.3.3"
   }
 }
