--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "foursquareVenues",
+  "name": "foursquarevenues",
   "version": "0.0.0",
   "description": "Simple query to 4square venue's api",
-  "main": "./foursquareVenues",
+  "main": "./foursquarevenues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
