Added getVenue method.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foursquarevenues",
-  "version": "0.0.2-1",
+  "version": "0.0.3",
   "description": "Simple query to 4square venue's api",
   "main": "./foursquarevenues",
   "scripts": {
@@ -14,7 +14,8 @@
     "foursquare",
 		"venues",
 		"search",
-		"explore"
+		"explore",
+		"venue"
   ],
   "author": "Yamil Asusta (elbuo8)",
   "license": "BSD",
