--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foursquarevenues",
   "version": "0.0.5",
   "description": "Simple query to 4square venue's api",
-  "main": "./foursquarevenues",
+  "main": "./foursquareVenues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
