--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foursquarevenues",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Simple query to 4square venue's api",
   "main": "./foursquareVenues",
   "scripts": {
@@ -12,15 +12,15 @@
   },
   "keywords": [
     "foursquare",
-		"venues",
-		"search",
-		"explore",
-		"venue"
+    "venues",
+    "search",
+    "explore",
+    "venue"
   ],
   "author": "Yamil Asusta (elbuo8)",
-  "license": "BSD",
+  "license": "MIT",
   "dependencies": {
-    "request": "~2.11.1",
+    "request": "~2.16.6",
     "coffee-script": "~1.3.3"
   },
   "devDependencies": {
