--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "author": "Yamil Asusta (elbuo8)",
   "license": "MIT",
   "dependencies": {
-    "request": "~2.40.0"
-  },
-  "devDependencies": {
+    "request": "~2.40.0",
     "coffee-script": "~1.3.3"
   }
 }
