--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "author": "Yamil Asusta (elbuo8)",
   "license": "MIT",
   "dependencies": {
-    "request": "~2.40.0",
+    "request": "~2.40.0"
+  },
+  "devDependencies": {
     "coffee-script": "~1.3.3"
   }
 }
